one way to add data in variable

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 const endpoint = 'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json';
 
 const cities = [] ;
-// const data = fetch(endpoint).then( blob => blob.json()).then(data => cities = data); this is way you can assign data to variable just change const in to var var cities = [] ;
+// const data = fetch(endpoint).then( blob => blob.json()).then(data => cities = data); this iis way you can assign data to variable just change const in to var var cities = [] ;
 const data = fetch(endpoint).then( blob => blob.json()).then(data => cities = data);
 console.log(data)
 
