--- a/index.html
+++ b/index.html
@@ -1,41 +1,58 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Type Ahead 👀</title>
-  <link rel="stylesheet" href="style.css">
-  <link rel="icon" href="https://fav.farm/🔥" />
-</head>
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Type Ahead 👀</title>
+    <link rel="stylesheet" href="style.css" />
+    <link rel="icon" href="https://fav.farm/🔥" />
+  </head>
+  <body>
+    <form class="search-form">
+      <input type="text" class="search" placeholder="City or State" />
+      <ul class="suggestions">
+        <li>Filter for a city</li>
+        <li>or a state</li>
+      </ul>
+    </form>
+    <script>
+      const endpoint =
+        "https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json";
+      // storing data
+      const cities = [];
+      // const data = fetch(endpoint).then( blob => blob.json()).then(data => cities = data); this iis way you can assign data to variable just change const in to var var cities = [] ;
+      // data storing and managing
+      const data = fetch(endpoint)
+        .then((blob) => blob.json())
+        .then((data) => cities.push(...data));
 
-  <form class="search-form">
-    <input type="text" class="search" placeholder="City or State">
-    <ul class="suggestions">
-      <li>Filter for a city</li>
-      <li>or a state</li>
-    </ul>
-  </form>
-<script>
-const endpoint = 'https://gist.githubusercontent.com/Miserlou/c5cd8364bf9b2420bb29/raw/2bf258763cdddd704f8ffd3ea9a3e81d25e2c6f6/cities.json';
-// storing data 
-const cities = [] ;
-// const data = fetch(endpoint).then( blob => blob.json()).then(data => cities = data); this iis way you can assign data to variable just change const in to var var cities = [] ;
-// data storing and managing
-const data = fetch(endpoint).then( blob => blob.json()).then(data => cities.push(...data));
+      // for searching data   if u want to use in console findMatches('b', cities) thhrough this u can
+      function findMatches(wordToMatch, cities) {
+        return cities.filter((place) => {
+          // create regular expression for searching data
+          const regex = new RegExp(wordToMatch, "gi"); // wordToMatch word u pass for search 'gi' = g is for global and i = insensitive
 
-// for searching data   if u want to use in console findMatches('b', cities) thhrough this u can
-function findMatches(wordToMatch, cities) {
-
-  return cities.filter( place =>   {
-// create regular expression for searching data
-const regex = new RegExp(wordToMatch , 'gi')  // wordToMatch word u pass for search 'gi' = g is for global and i = insensitive 
-
-    return place.city.match(regex) || place.state.match(regex)// access cities properties and get city  now you can access state also
-  })
-}
-
-
-
-</script>
-</body>
+          return place.city.match(regex) || place.state.match(regex); // access cities properties and get city  now you can access state also
+        });
+      }
+      // for display data on frount end
+      function displayMatches() {
+        const display = findMatches(this.value, cities)   // this.value return the value u search in data and give u the optimize result
+     const html = display.map( place => {
+      return `
+      <li>
+        <span class="name"> ${place.city}, ${place.state}</span> 
+        <span class="name"> ${place.population}</span> 
+        </li>`
+     }).join('')
+     suggesion.innerHTML = html;  // suggestion is class given below pick from lower input area (hint)
+     console.log(html) // upper value show in screen and u see also console in 
+      }
+      // for access class
+      const searchInput = document.querySelector(".search");
+      const suggesion = document.querySelector(".suggestions");
+      // event for input
+      searchInput.addEventListener("change", displayMatches);
+      searchInput.addEventListener("keyup", displayMatches);
+    </script>
+  </body>
 </html>
